lcf2023/src/myCompilerPackage/SimpleJava2023Parser.java
// $ANTLR 3.5.1 C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g 2023-12-19 00:11:24

	package myCompilerPackage; 		
	import myCompilerPackage.util.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class SimpleJava2023Parser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AADD", "ABSTRACT", "ADD", "ASSERT", 
		"BOOLEAN_TYPE", "BREAK", "BYTE", "CASE", "CATCH", "CHAR", "CHAR_TYPE", 
		"CLASS", "COMMA", "COMMENT", "COMP", "CONST", "CONTINUE", "DEFAULT", "DIV", 
		"DO", "DOT", "DOUBLE_TYPE", "ELSE", "ENUM", "EQ", "ERROR_TOKEN", "ESC_SEQ", 
		"EXPONENT", "EXPORTS", "EXTENDS", "FALSE", "FI", "FINAL", "FINALLY", "FLOAT", 
		"FLOAT_TYPE", "FOR", "GOTO", "GT", "GTE", "HEX_DIGIT", "ID", "IF", "IMPLEMENTS", 
		"IMPORT", "INSTANCEOF", "INT", "INTERFACE", "INT_TYPE", "LB", "LBR", "LONG_TYPE", 
		"LP", "LT", "LTE", "MOD", "MODULE", "MUL", "NATIVE", "NEQ", "NEW", "NULL", 
		"OCTAL_ESC", "PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", "RB", "RBR", 
		"REQUIRES", "RETURN", "RP", "SC", "SHORT", "SSUB", "STATIC", "STRICTFP", 
		"STRING", "STRING_TYPE", "SUB", "SUPER", "SWITCH", "SYNCHRONIZED", "THIS", 
		"THROW", "THROWS", "TRANSIENT", "TRUE", "TRY", "UNICODE_ESC", "VAR", "VOID", 
		"VOLATILE", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int AADD=4;
	public static final int ABSTRACT=5;
	public static final int ADD=6;
	public static final int ASSERT=7;
	public static final int BOOLEAN_TYPE=8;
	public static final int BREAK=9;
	public static final int BYTE=10;
	public static final int CASE=11;
	public static final int CATCH=12;
	public static final int CHAR=13;
	public static final int CHAR_TYPE=14;
	public static final int CLASS=15;
	public static final int COMMA=16;
	public static final int COMMENT=17;
	public static final int COMP=18;
	public static final int CONST=19;
	public static final int CONTINUE=20;
	public static final int DEFAULT=21;
	public static final int DIV=22;
	public static final int DO=23;
	public static final int DOT=24;
	public static final int DOUBLE_TYPE=25;
	public static final int ELSE=26;
	public static final int ENUM=27;
	public static final int EQ=28;
	public static final int ERROR_TOKEN=29;
	public static final int ESC_SEQ=30;
	public static final int EXPONENT=31;
	public static final int EXPORTS=32;
	public static final int EXTENDS=33;
	public static final int FALSE=34;
	public static final int FI=35;
	public static final int FINAL=36;
	public static final int FINALLY=37;
	public static final int FLOAT=38;
	public static final int FLOAT_TYPE=39;
	public static final int FOR=40;
	public static final int GOTO=41;
	public static final int GT=42;
	public static final int GTE=43;
	public static final int HEX_DIGIT=44;
	public static final int ID=45;
	public static final int IF=46;
	public static final int IMPLEMENTS=47;
	public static final int IMPORT=48;
	public static final int INSTANCEOF=49;
	public static final int INT=50;
	public static final int INTERFACE=51;
	public static final int INT_TYPE=52;
	public static final int LB=53;
	public static final int LBR=54;
	public static final int LONG_TYPE=55;
	public static final int LP=56;
	public static final int LT=57;
	public static final int LTE=58;
	public static final int MOD=59;
	public static final int MODULE=60;
	public static final int MUL=61;
	public static final int NATIVE=62;
	public static final int NEQ=63;
	public static final int NEW=64;
	public static final int NULL=65;
	public static final int OCTAL_ESC=66;
	public static final int PACKAGE=67;
	public static final int PRIVATE=68;
	public static final int PROTECTED=69;
	public static final int PUBLIC=70;
	public static final int RB=71;
	public static final int RBR=72;
	public static final int REQUIRES=73;
	public static final int RETURN=74;
	public static final int RP=75;
	public static final int SC=76;
	public static final int SHORT=77;
	public static final int SSUB=78;
	public static final int STATIC=79;
	public static final int STRICTFP=80;
	public static final int STRING=81;
	public static final int STRING_TYPE=82;
	public static final int SUB=83;
	public static final int SUPER=84;
	public static final int SWITCH=85;
	public static final int SYNCHRONIZED=86;
	public static final int THIS=87;
	public static final int THROW=88;
	public static final int THROWS=89;
	public static final int TRANSIENT=90;
	public static final int TRUE=91;
	public static final int TRY=92;
	public static final int UNICODE_ESC=93;
	public static final int VAR=94;
	public static final int VOID=95;
	public static final int VOLATILE=96;
	public static final int WHILE=97;
	public static final int WS=98;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public SimpleJava2023Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SimpleJava2023Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return SimpleJava2023Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g"; }


		SemanticHandler h = new SemanticHandler ();

		public SemanticHandler getHandler () {
			return h;
		}


	  public void displayRecognitionError(String[] tokenNames,
	                                       RecognitionException e) {
			// in tokenNames c'è la lista dei token che si sarebbe voluto trovare
			// token che genera l'errore
			Token tk = input.LT(1);
	    // header e corpo dell'errore gestito automaticamente da ANTLR
			String hdr = getErrorHeader(e);
			String msg = getErrorMessage(e, tokenNames);
			
			// passo tutto all'handler che lo 
			h.handleError(tokenNames, tk, e, hdr, msg);
	  }




	// $ANTLR start "javaStart"
	// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:58:1: javaStart : ( packageRule )? ( importRule )* classDefinitionRule ;
	public final void javaStart() throws RecognitionException {
		try {
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:59:2: ( ( packageRule )? ( importRule )* classDefinitionRule )
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:60:3: ( packageRule )? ( importRule )* classDefinitionRule
			{
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:60:3: ( packageRule )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==PACKAGE) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:60:3: packageRule
					{
					pushFollow(FOLLOW_packageRule_in_javaStart64);
					packageRule();
					state._fsp--;

					}
					break;

			}

			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:62:3: ( importRule )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==IMPORT) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:62:5: importRule
					{
					pushFollow(FOLLOW_importRule_in_javaStart75);
					importRule();
					state._fsp--;

					}
					break;

				default :
					break loop2;
				}
			}

			pushFollow(FOLLOW_classDefinitionRule_in_javaStart84);
			classDefinitionRule();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "javaStart"



	// $ANTLR start "packageRule"
	// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:66:1: packageRule : PACKAGE dotNameRule SC ;
	public final void packageRule() throws RecognitionException {
		try {
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:67:2: ( PACKAGE dotNameRule SC )
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:68:3: PACKAGE dotNameRule SC
			{
			match(input,PACKAGE,FOLLOW_PACKAGE_in_packageRule98); 
			pushFollow(FOLLOW_dotNameRule_in_packageRule100);
			dotNameRule();
			state._fsp--;

			match(input,SC,FOLLOW_SC_in_packageRule102); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "packageRule"



	// $ANTLR start "dotNameRule"
	// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:71:1: dotNameRule : ID ( DOT ID )* ;
	public final void dotNameRule() throws RecognitionException {
		try {
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:72:2: ( ID ( DOT ID )* )
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:73:3: ID ( DOT ID )*
			{
			match(input,ID,FOLLOW_ID_in_dotNameRule116); 
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:73:6: ( DOT ID )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==DOT) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:73:7: DOT ID
					{
					match(input,DOT,FOLLOW_DOT_in_dotNameRule119); 
					match(input,ID,FOLLOW_ID_in_dotNameRule121); 
					}
					break;

				default :
					break loop3;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "dotNameRule"



	// $ANTLR start "importRule"
	// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:77:1: importRule : IMPORT ID ( DOT ID )* ( DOT MUL )? SC ;
	public final void importRule() throws RecognitionException {
		try {
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:78:2: ( IMPORT ID ( DOT ID )* ( DOT MUL )? SC )
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:79:3: IMPORT ID ( DOT ID )* ( DOT MUL )? SC
			{
			match(input,IMPORT,FOLLOW_IMPORT_in_importRule138); 
			match(input,ID,FOLLOW_ID_in_importRule149); 
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:81:4: ( DOT ID )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==DOT) ) {
					int LA4_1 = input.LA(2);
					if ( (LA4_1==ID) ) {
						alt4=1;
					}

				}

				switch (alt4) {
				case 1 :
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:81:5: DOT ID
					{
					match(input,DOT,FOLLOW_DOT_in_importRule164); 
					match(input,ID,FOLLOW_ID_in_importRule166); 
					}
					break;

				default :
					break loop4;
				}
			}

			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:82:4: ( DOT MUL )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==DOT) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:82:5: DOT MUL
					{
					match(input,DOT,FOLLOW_DOT_in_importRule177); 
					match(input,MUL,FOLLOW_MUL_in_importRule179); 
					}
					break;

			}

			match(input,SC,FOLLOW_SC_in_importRule186); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "importRule"



	// $ANTLR start "classDefinitionRule"
	// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:87:1: classDefinitionRule : (p= PUBLIC )? CLASS c= ID classCodeRule ;
	public final void classDefinitionRule() throws RecognitionException {
		Token p=null;
		Token c=null;

		try {
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:88:2: ( (p= PUBLIC )? CLASS c= ID classCodeRule )
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:89:3: (p= PUBLIC )? CLASS c= ID classCodeRule
			{
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:89:4: (p= PUBLIC )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==PUBLIC) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:89:4: p= PUBLIC
					{
					p=(Token)match(input,PUBLIC,FOLLOW_PUBLIC_in_classDefinitionRule203); 
					}
					break;

			}

			match(input,CLASS,FOLLOW_CLASS_in_classDefinitionRule208); 
			c=(Token)match(input,ID,FOLLOW_ID_in_classDefinitionRule214); 
			 h.manageClassName (p, c); 
			pushFollow(FOLLOW_classCodeRule_in_classDefinitionRule229);
			classCodeRule();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "classDefinitionRule"



	// $ANTLR start "classCodeRule"
	// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:96:1: classCodeRule : LBR ( varDeclarationRule | methodDeclarationRule )* RBR ;
	public final void classCodeRule() throws RecognitionException {
		try {
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:97:2: ( LBR ( varDeclarationRule | methodDeclarationRule )* RBR )
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:98:3: LBR ( varDeclarationRule | methodDeclarationRule )* RBR
			{
			match(input,LBR,FOLLOW_LBR_in_classCodeRule244); 
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:99:3: ( varDeclarationRule | methodDeclarationRule )*
			loop7:
			while (true) {
				int alt7=3;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==BOOLEAN_TYPE||LA7_0==CHAR_TYPE||LA7_0==DOUBLE_TYPE||LA7_0==FLOAT_TYPE||LA7_0==INT_TYPE||LA7_0==LONG_TYPE||LA7_0==STRING_TYPE) ) {
					alt7=1;
				}
				else if ( (LA7_0==VOID) ) {
					alt7=2;
				}

				switch (alt7) {
				case 1 :
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:99:5: varDeclarationRule
					{
					pushFollow(FOLLOW_varDeclarationRule_in_classCodeRule250);
					varDeclarationRule();
					state._fsp--;

					}
					break;
				case 2 :
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:100:5: methodDeclarationRule
					{
					pushFollow(FOLLOW_methodDeclarationRule_in_classCodeRule257);
					methodDeclarationRule();
					state._fsp--;

					}
					break;

				default :
					break loop7;
				}
			}

			match(input,RBR,FOLLOW_RBR_in_classCodeRule264); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "classCodeRule"



	// $ANTLR start "varDeclarationRule"
	// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:105:1: varDeclarationRule : t= typeRule v= ID ( EQ e= exprRule )? ( COMMA v= ID ( EQ e= exprRule )? )* SC ;
	public final void varDeclarationRule() throws RecognitionException {
		Token v=null;
		String t =null;
		Variable e =null;

		try {
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:106:2: (t= typeRule v= ID ( EQ e= exprRule )? ( COMMA v= ID ( EQ e= exprRule )? )* SC )
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:107:3: t= typeRule v= ID ( EQ e= exprRule )? ( COMMA v= ID ( EQ e= exprRule )? )* SC
			{
			pushFollow(FOLLOW_typeRule_in_varDeclarationRule281);
			t=typeRule();
			state._fsp--;

			v=(Token)match(input,ID,FOLLOW_ID_in_varDeclarationRule285); 
				h.varDeclaration (t, v); 
			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:108:4: ( EQ e= exprRule )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==EQ) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:108:5: EQ e= exprRule
					{
					match(input,EQ,FOLLOW_EQ_in_varDeclarationRule298); 
					pushFollow(FOLLOW_exprRule_in_varDeclarationRule302);
					e=exprRule();
					state._fsp--;

						h.assignValue (v, e); 		
					}
					break;

			}

			// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:109:4: ( COMMA v= ID ( EQ e= exprRule )? )*
			loop10:
			while (true) {
				int alt10=2;
				int LA10_0 = input.LA(1);
				if ( (LA10_0==COMMA) ) {
					alt10=1;
				}

				switch (alt10) {
				case 1 :
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:109:5: COMMA v= ID ( EQ e= exprRule )?
					{
					match(input,COMMA,FOLLOW_COMMA_in_varDeclarationRule318); 
					v=(Token)match(input,ID,FOLLOW_ID_in_varDeclarationRule322); 
						h.varDeclaration (t, v); 
					// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:110:5: ( EQ e= exprRule )?
					int alt9=2;
					int LA9_0 = input.LA(1);
					if ( (LA9_0==EQ) ) {
						alt9=1;
					}
					switch (alt9) {
						case 1 :
							// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:110:6: EQ e= exprRule
							{
							match(input,EQ,FOLLOW_EQ_in_varDeclarationRule336); 
							pushFollow(FOLLOW_exprRule_in_varDeclarationRule340);
							e=exprRule();
							state._fsp--;

								h.assignValue (v, e); 		
							}
							break;

					}

					}
					break;

				default :
					break loop10;
				}
			}

			match(input,SC,FOLLOW_SC_in_varDeclarationRule355); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "varDeclarationRule"



	// $ANTLR start "typeRule"
	// C:\\Users\\Unibg\\Documents\\Eclipse\\WS CorsoLC\\lcf2023\\src\\myCompilerPackage\\SimpleJava2023.g:115:1: typeRule returns [String type] : (t= INT_TYPE |t= FLOAT_TYPE |t= LONG_TYPE |t= DOUBLE_TYPE |t= BOOLEAN_TYPE |t= CHAR_TYPE |t= STRING_TYPE ) ;
	public final String typeRule() throws RecognitionException {
		String type = null;


		Token t=null;
